// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs should render component 1`] = `
<div
  className="mfui-beta-breadcrumbs mfui-beta-breadcrumbs_color_black"
>
  <div
    className="mfui-beta-breadcrumbs__item"
    key="МегаФон"
  >
    <TextLink
      color="black"
      href="#"
    >
      МегаФон
    </TextLink>
  </div>
  <div
    className="mfui-beta-breadcrumbs__item"
    key="Мобильная связь"
  >
    <TextLink
      color="black"
      href="#"
    >
      Мобильная связь
    </TextLink>
  </div>
  <div
    className="mfui-beta-breadcrumbs__item"
    key="Тарифы"
  >
    <TextLink
      color="black"
      href="#"
    >
      Тарифы
    </TextLink>
  </div>
</div>
`;

exports[`Breadcrumbs should render with optional props 1`] = `
<div
  className="mfui-beta-breadcrumbs mfui-beta-breadcrumbs_color_white custom-class-name"
>
  <div
    className="mfui-beta-breadcrumbs__item item-custom-class-name"
    key="МегаФон"
  >
    <TextLink
      color="white"
      href="#"
    >
      МегаФон
    </TextLink>
  </div>
  <div
    className="mfui-beta-breadcrumbs__item item-custom-class-name"
    key="Мобильная связь"
  >
    <TextLink
      color="white"
      href="#"
    >
      Мобильная связь
    </TextLink>
  </div>
  <div
    className="mfui-beta-breadcrumbs__item item-custom-class-name"
    key="Тарифы"
  >
    <TextLink
      color="white"
      href="#"
    >
      Тарифы
    </TextLink>
  </div>
</div>
`;
